--- a/package.json
+++ b/package.json
@@ -1,47 +1,59 @@
 {
-  "name": "thmoreiralab",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.4",
-    "@mui/styled-engine-sc": "^5.6.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
-    "firebase": "^9.7.0",
-    "firebase-tools": "^10.7.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dfb": "firebase deploy --only hosting:amoreira"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "thmoreiralab",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@mui/icons-material": "^5.6.2",
+        "@mui/material": "^5.6.4",
+        "@mui/styled-engine-sc": "^5.6.1",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.1.1",
+        "@testing-library/user-event": "^13.5.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "firebase": "^9.7.0",
+        "firebase-tools": "^10.7.2",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
+        "react-firebase-hooks": "^5.0.3",
+        "react-scripts": "5.0.1",
+        "styled-components": "^5.3.5",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "dfb": "firebase deploy --only hosting:amoreira",
+        "lint": "eslint ./ --ignore-path .gitignore",
+        "lint:fix": "yarn run lint -- --fix"
+    },
+    "eslintConfig": {
+        "extends": "@imaginary-cloud/react"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@imaginary-cloud/eslint-config-react": "^2.0.1",
+        "@imaginary-cloud/prettier-config": "^1.0.0",
+        "eslint": "^7.32.0 || ^8.2.0",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "install-peerdeps": "^3.0.3",
+        "prettier": "^2.6.2"
+    }
 }
